# Observable-k8s-Pipeline

./: Dockerfile  README.md  command_history.txt  log_iris-observable-deployment-585fbf6859-x6vdh.txt  logs_iris-observable-deployment-585fbf6859-ppnsh.txt  post.lua  pyproject.toml  wrk_results.txt
app/: main.py
k8s/: deployment.yaml  hpa.yaml  service.yaml
